# omega_h-dolfin

./: CMakeLists.txt  demo_poisson.py  main.cpp  test_mesh.py  test_pydolfin.py
aux/: do-config-omega_h.sh  do-config.sh
